(bug 58140) Multiple moderated topics in a row takes up too much space
Use collapsed-one-line style for moderated topics

Bug: 58140

--- a/modules/discussion/styles/topic.less
+++ b/modules/discussion/styles/topic.less
@@ -1,4 +1,5 @@
 @import 'settings/colors.less';
+@import 'mixins/collapse.less';
 @import 'mediawiki.mixins.less';
 
 .flow-topic-container {
@@ -12,10 +13,9 @@
 	}
 
 	&.flow-topic-moderated {
+		.flow-collapse-one-line;
+
 		.flow-topic-children-container {
-			display: none;
-		}
-		.flow-topic-posts-meta {
 			display: none;
 		}
 	}
